--- a/bioworld-app/package.json
+++ b/bioworld-app/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run start:dev",
-    "build": "npm build start:dev",
+    "build": "npm run build:dev",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start:dev": "ng serve --c=dev",
-    "build:dev": "ng serve --c=dev",
+    "build:dev": "ng build --c=dev",
     "start:prod": "ng serve --c=prod",
-    "buid:prod": "ng serve --c=prod"
+    "build:prod": "ng build --c=prod"
   },
   "private": true,
   "dependencies": {
