--- a/bioworld-app/package.json
+++ b/bioworld-app/package.json
@@ -31,7 +31,7 @@
     "@ngrx/entity": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
-    "firebase": "^7.0 || ^8.0",
+    "firebase": "^7.6.1",
     "ngx-image-cropper": "^3.3.5",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
